--- a/css/default.css
+++ b/css/default.css
@@ -3,24 +3,9 @@ html {
 }
 
 body {
+    font-family: "Courier New";
   font-size: 1.6rem;
   color: #000;
-}
-
-header {
-  border-bottom: 0.2rem solid #000;
-}
-
-nav {
-  text-align: right;
-}
-
-nav a {
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-  text-transform: uppercase;
 }
 
 footer {
@@ -37,6 +22,41 @@ h1 {
 
 h2 {
   font-size: 2rem;
+}
+
+div a {
+    text-decoration: none;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #000000;
+  text-align: center;
+  background-color: #f2f2f2;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: "Courier New";
+}
+
+li a {
+    color : #000;
+}
+
+.topnav a.active {
+  background-color: #000;
+  color: white;
+}
+
+.topnav a.inactive {
+  background-color: #FFF;
+  color: black;
+}
+
+.topnav a:hover:not(.active) {
+    background-color: #d0d0d0;
+    color: white;
 }
 
 article .header {
