slightly fixed mobile version, blog and projects

--- a/templates/post.html
+++ b/templates/post.html
@@ -4,6 +4,10 @@
         $if(author)$
             by $author$
         $endif$
+        $if(updated)$
+            <br>
+            Last updated: $updated$
+        $endif$
     </section>
     <section>
         $body$
