--- a/css/default.css
+++ b/css/default.css
@@ -4,54 +4,51 @@ html {
 
 body {
     font-family: "Courier New";
-  font-size: 1.6rem;
-  color: #000;
+    font-size: 1.6rem;
+    color: #000;
 }
 
 footer {
-  margin-top: 3rem;
-  padding: 1.2rem 0;
-  border-top: 0.2rem solid #000;
-  font-size: 1.2rem;
-  color: #555;
-}
-
-h1 {
-  font-size: 2.4rem;
-}
-
-h2 {
-  font-size: 2rem;
+    margin-top: 3rem;
+    padding: 1.2rem 0;
+    border-top: 0.2rem solid #000;
+    font-size: 1.2rem;
+    color: #555;
 }
 
 div a {
     text-decoration: none;
 }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #000000;
-  text-align: center;
-  background-color: #f2f2f2;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 15px;
-  font-family: "Courier New";
+a {
+    color: #000;
 }
 
-li a {
-    color : #000;
+.topnav {
+    margin-top: 30px;
+    height: 30px;
+}
+
+.topnav a {
+    float: left;
+    display: block;
+    color: #000000;
+    text-align: center;
+    background-color: #f2f2f2;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: "Courier New";
 }
 
 .topnav a.active {
-  background-color: #000;
-  color: white;
+    background-color: #000;
+    color: white;
 }
 
 .topnav a.inactive {
-  background-color: #FFF;
-  color: black;
+    background-color: #FFF;
+    color: black;
 }
 
 .topnav a:hover:not(.active) {
@@ -60,15 +57,9 @@ li a {
 }
 
 article .header {
-  font-size: 1.4rem;
-  font-style: italic;
-  color: #555;
-}
-
-.logo a {
-  font-weight: bold;
-  color: #000;
-  text-decoration: none;
+    font-size: 1.4rem;
+    font-style: italic;
+    color: #555;
 }
 
 @media (max-width: 319px) {
